fixed the colours and started on mobile layout

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,16 +1,18 @@
 .grid-wrapper {
-    display: grid;
+    /* display: grid;
+    
     margin: 2rem;
     grid-template-columns: repeat(12, [col-start] 1fr);
-    gap: 20px;
+    gap: 20px; */
+    display: block;
 }
 
-.grid-wrapper > * {
+/* .grid-wrapper > * {
     grid-column: col-start / span 12;
 }
 
 /* mobile first */
-.menu {
+/* .menu {
     grid-column: col-start / span 2;
 }
 
@@ -18,13 +20,14 @@
     grid-column: col-start 2 / span -1;
     grid-row: 1;
 }
-
+/*  */
 .card-wrapper {
-    grid-column: col-start 3 / span 6;
+    grid-column: col-start 2 / span 10;
+    flex-wrap: wrap;
 }
 
 /* tablet and smaller screens */
-@media (min-width: 500px) {
+/* @media (min-width: 500px) { */
     /* .nav-main {
         grid-column: col-start / span 2;
         grid-row: 2 / 4;
@@ -37,10 +40,16 @@
         grid-column: col-start 11 / span 2;
         grid-row: 2;
     } */
-}
+/* } */
 
 /* large bois */
-@media (min-width: 700px) {
+@media (min-width: 500px) {
+    .grid-wrapper {
+        display: grid;
+        margin: 2rem;
+        grid-template-columns: repeat(12, [col-start] 1fr);
+        gap: 20px;
+    }
     .signature {
         grid-column: col-start 2 / span 10;
         grid-row: 1;
@@ -50,10 +59,10 @@
         grid-row: 2;
     }
     .card-wrapper {
-        grid-column: col-start 4 / span 7;
+        grid-column: col-start 4 / span 5;
         grid-row: 2 / 4;
     }
     .selection {
-        grid-column: col-start 11 / span 2;
+        grid-column: col-start 10 / span 2;
     }
 }
